--- a/pinto/produtos.html
+++ b/pinto/produtos.html
@@ -7,12 +7,15 @@
      <body> 
       <header> 
        <h1>Barbearia Power</h1>
-       
-       <ul>   
-     <li>Inicio</li>
-     <li>Produtos</li>
-     <li>Contatos</li>
-       </ul>
+       <nav>
+        <header>
+             <ul>   
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="produtos.html">Produtos</a></li>
+              <li><A href="contatos.html">Contatos</A></li>
+             </ul>
+      </nav>
+    </header>
       </header>
      </body>     
 </html>
